--- a/t-ui/angular.json
+++ b/t-ui/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.less",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css"
             ],
             "scripts": []
           },
